changed the casing of image files endings so they match the casing in github

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 section {
     display: flex;
     flex-wrap: wrap;
-    background-image: url("../images/Board.png");
+    background-image: url("../images/Board.PNG");
     background-size: var(--board-size);
     height: var(--board-size);
     width: var(--board-size);
