--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,8 @@ section img {
 }
 
 
-/* need pieces in png */
-/* .piece {
-    height: 100%;
-    width: 100%;
-
-} */
-
+@media only screen and (max-width: 768px) {
+    :root {
+        --board-size: 320px;
+    }
+}
