--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ div.container {
     margin-left: 20%;
 }
 div.buttonandtimer {
-    margin: 8%;
+    margin: 7%;
     text-align: center;
 }
 div.buttonandtimer img {
@@ -29,7 +29,7 @@ div.buttonandtimer img {
 }
 div.buttonandtimer div {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -51,7 +51,11 @@ button {
     margin-bottom: 10%;
 }
 div h3 {
-    margin-left: 5%;
+    /* margin-left: 5%; */
+    padding-left: 5%;
+    padding-right: 10%;
+    height: calc(var(--board-size) / 12);
+    width: 100%;
 }
 
 
