--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,14 @@ div h3 {
 
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
     :root {
         --board-size: 320px;
+    }
+
+    div.container {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
     }
 }
